# devin_test

./: README.md
news-backend/: pyproject.toml
news-backend/app/: main.py
news-frontend/: .env  index.html  package-lock.json  package.json
news-frontend/src/: App.css  App.tsx
